--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,4 @@ Results
 #yotube creddentials
 Source/YotubeApi/youtube-v3-discoverydocument.json
 Source/YotubeApi/client_secrets.json
-Source/YotubeApi/youtube-v3-discoverydocument.json
+Source/YotubeApi/YotubeApiCaller.py-oauth2.json
