--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 Resources/Personal-Narration
 Resources/Suicidal
 Resources/TokenizedTextFiles
-
+Resources/Database
 #Documents
 Docs
 
@@ -17,3 +17,4 @@ Source/YotubeApi/youtube-v3-discoverydocument.json
 Source/YotubeApi/client_secrets.json
 Source/YotubeApi/YotubeApiCaller.py-oauth2.json
 
+Resources/CommentsFiles/Personal-Narration/
