removed comment text files

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Resources/Personal-Narration
 Resources/Suicidal
 Resources/TokenizedTextFiles
 Resources/Database
+Resources/CommentsFiles
 #Documents
 Docs
 
