--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ DataAccess/Models/__pycache__/
 DataAccess/Repos/__pycache__/
 DataAccess/Utils/__pycache__/
 Source/__pycache__/
+Resources/1.xlsx
